# mac-dedup

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-infrastructure/: 1-CONTEXT.md
.planning/phases/04-hash-engine/: 04-CONTEXT.md  04-PLAN.md
.planning/phases/05-keep-strategy/: 05-CONTEXT.md  05-PLAN.md  05-SUMMARY.md
src/mac_dedup/: __init__.py  cli.py  deleter.py  file_type.py  filter.py  hash_engine.py  keep_strategy.py  reporter.py  scanner.py
tests/: __init__.py  conftest.py  test_cli.py  test_deleter.py  test_file_type.py  test_filter.py  test_hash_engine.py  test_keep_strategy.py  test_reporter.py  test_scanner.py
